--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 flask>=3.0.0
-docling>=1.0.0
+docling>=2.61.1
 python-dotenv>=1.0.0
 pytest>=7.4.0
 flask-cors>=4.0.0
 opencv-python-headless>=4.8.0
+qdrant-client>=1.16.0
+langchain>=1.0.8
+langchain-core>=1.1.0
+langchain-text-splitters>=1.0.0
+langchain-openai>=1.0.3
