--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,14 @@ langchain>=1.0.8
 langchain-core>=1.1.0
 langchain-text-splitters>=1.0.0
 langchain-openai>=1.0.3
+
+tree-sitter>=0.20.0
+tree-sitter-python>=0.20.0
+tree-sitter-typescript>=0.20.0
+tree-sitter-java>=0.20.0
+tree-sitter-c>=0.20.0
+tree-sitter-cpp>=0.20.0
+tree-sitter-c-sharp>=0.20.0
+tree-sitter-javascript>=0.20.0
+pydantic>=2.0.0
+jsonschema>=4.0.0
