Add human-in-the-loop agent workflow system
Introduces a WebSocket-based chat interface and a modular agent workflow for real-time code change automation. Adds agent components for intent extraction, impact analysis, planning, code editing, testing, verification, and PR creation, along with supporting services and configuration updates. Updates requirements and environment files to support new dependencies and agent configuration.

--- a/env.example
+++ b/env.example
@@ -1,4 +1,6 @@
-# Flask Configuration
+# ============================================
+# Flask Application Configuration
+# ============================================
 HOST=0.0.0.0
 PORT=5001
 DEBUG=False
@@ -6,3 +8,51 @@ DEBUG=False
 # Upload Configuration
 UPLOAD_FOLDER=/tmp
 
+# ============================================
+# WebSocket Configuration
+# ============================================
+WEBSOCKET_CORS_ORIGINS=*
+WEBSOCKET_ASYNC_MODE=eventlet
+
+# ============================================
+# Agent Configuration
+# ============================================
+AGENT_MAX_RETRIES=2
+AGENT_TIMEOUT=3600
+AGENT_APPROVAL_REQUIRED=true
+AGENT_AUTO_APPLY_LOW_RISK=false
+
+# ============================================
+# LLM Configuration (REQUIRED for agent features)
+# ============================================
+OPENAI_API_KEY=key
+LLM_MODEL=gpt-4
+LLM_TEMPERATURE=0.3
+LLM_MAX_TOKENS=2000
+
+# ============================================
+# Git Configuration
+# ============================================
+GIT_USER_NAME=Agent
+GIT_USER_EMAIL=agent@example.com
+GITHUB_TOKEN=your_github_token_here
+GITHUB_API_URL=https://api.github.com
+
+# ============================================
+# Test Runner Configuration
+# ============================================
+TEST_RUNNER_TIMEOUT=300
+USE_DOCKER_FOR_TESTS=false
+DOCKER_IMAGE_PREFIX=test-runner
+
+# ============================================
+# Security Configuration
+# ============================================
+MAX_IMPACTED_FILES_FOR_AUTO_APPROVAL=5
+REQUIRE_HUMAN_APPROVAL_FOR_MIGRATIONS=true
+
+# ============================================
+# PKG Configuration
+# ============================================
+PKG_CACHE_ENABLED=true
+PKG_CACHE_PATH=pkg.json
