--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,11 @@ tree-sitter-c-sharp>=0.20.0
 tree-sitter-javascript>=0.20.0
 pydantic>=2.0.0
 jsonschema>=4.0.0
+
+# WebSocket and Agent Dependencies
+flask-socketio>=5.3.0
+python-socketio>=5.10.0
+eventlet>=0.33.0
+libcst>=1.1.0
+gitpython>=3.1.40
+pygithub>=2.1.1
