Integrate Claude-powered document analysis and PKG enhancements - not using for now , using the regular flow
Added Claude integration for document analysis and semantic PKG enhancements. Introduced new services for analyzing and linking documents to code modules, updated the project schema to support a 'documents' array, and extended configuration and requirements for Claude API usage. The parser service now supports a 'use_claude' flag to enable Claude-based enhancements, and document discovery/integration is performed during PKG generation.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ langchain>=1.0.8
 langchain-core>=1.1.0
 langchain-text-splitters>=1.0.0
 langchain-openai>=1.0.3
+anthropic>=0.34.0
 
 tree-sitter>=0.20.0
 tree-sitter-python>=0.20.0
