--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ docling>=2.61.1
 python-dotenv>=1.0.0
 pytest>=7.4.0
 flask-cors>=4.0.0
+requests>=2.31.0
 opencv-python-headless<4.11.0
 numpy<2
 qdrant-client>=1.16.0
